features GET added to API and implemented
